Fixed alignment of hours and review

--- a/css/styles.css
+++ b/css/styles.css
@@ -278,9 +278,9 @@ nav h1 a {
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: auto;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px;
   position: relative;
   width: 85%;
   text-align: left;
@@ -291,4 +291,7 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
   text-align: left;
+}
+#restaurant-hours {
+  margin: auto;
 }
